--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
         <div class="flex-container">
                 <section id="hello" class="my-5 pb-5">
                     <div class="container">
-                        <div class="row">
+                        <div class="row text-center">
                             <div class="col-md-4 mb-3">
                                 <div class="card" id="card1" onclick="window.open('project1.html','mywindow');" style="cursor: pointer;">
                                     <img src="Resources/Project1.gif" class="card-img-top img-fluid">
