--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row text-center">
                             <div class="col-md-4 mb-3">
                                 <div class="card" id="card1" onclick="window.open('project4.html','mywindow');" style="cursor: pointer;">
                                     <img src="Resources/Project4.gif" class="card-img-top img-fluid">
