--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
 
     <nav>
         <div class="flex-container">
-                <section id="hello" class="my-5 pb-5">
+                <section id="hello" class="pb-5">
                     <div class="container pt-5">
                         <div class="row text-center">
                             <div class="col-md-4 mb-3">
