--- a/work.html
+++ b/work.html
@@ -74,8 +74,17 @@
             
                     </div>
                 </section>
+
             <div class="flex-left">
+                <!-- <div class="row justify-content-center align-items-center align-content-center" id="dp">
+                    <div class="col-md-5">
+                        <div class="">
+                                <img src="Resources/DM.jpg" class="img-fluid rounded-circle card-img-top">
+                        </div>
+                    </div>
+                </div> -->
             </div>
+
             <div class="flex-right">
                 <ul class="menu">
                     <li><a href="index.html" class="menu-line-1">HOME</a></li>
