--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="flex-right">
                 <ul class="menu">
                     <li><a href="#" class="menu-line-1 current">HOME</a></li>
-                    <li><a href="#" class="menu-line-2">ABOUT ME</a></li>
+                    <li><a href="aboutMe.html" class="menu-line-2">ABOUT ME</a></li>
                     <li><a href="work.html" class="menu-line-3">MY WORK</a></li>
                 </ul>
             </div>
