--- a/work.html
+++ b/work.html
@@ -88,7 +88,7 @@
             <div class="flex-right">
                 <ul class="menu">
                     <li><a href="index.html" class="menu-line-1">HOME</a></li>
-                    <li><a href="#" class="menu-line-2">ABOUT ME</a></li>
+                    <li><a href="aboutMe.html" class="menu-line-2">ABOUT ME</a></li>
                     <li><a href="work.html" class="menu-line-3 current">MY WORK</a></li>
                 </ul>
             </div>
