--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles2.css">
 </head>
 <body>
@@ -19,7 +20,14 @@
                 <h2 class="name" id="one">Zenith</h2>
                 <h2 class="name" id="two">Santos</h2>
                 <h2 class="name" id="three">Manuel</h2>
+           
             </div>
+            <div class="icon">
+                    <i class="fab fa-facebook fa-2x" onclick="window.open('https://www.facebook.com/zenith.manuel?ref=br_rs','mywindow');" style="cursor: pointer;"></i>
+                    <i class="fab fa-twitter fa-2x" onclick="window.open('https://twitter.com/23nith','mywindow');" style="cursor: pointer;"></i>
+                    <i class="fab fa-instagram fa-2x" onclick="window.open('https://www.instagram.com/meetme.at.thezenith','mywindow');" style="cursor: pointer;"></i>
+                    <i class="fab fa-github fa-2x" onclick="window.open('https://github.com/23nith','mywindow');" style="cursor: pointer;"></i>
+            </div>     
             <div class="flex-left">
             </div>
             <div class="flex-right">
