--- a/aboutMe.html
+++ b/aboutMe.html
@@ -57,7 +57,7 @@
 
         .one {
             position: relative;
-            background-image: url("Resources/busystreet.jpg");
+            background-image: url("Resources/busystreet -78.png");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -67,7 +67,7 @@
         }
         .two {
             position: relative;
-            background-image: url("Resources/citylights.jpg");
+            background-image: url("Resources/citylights -40.png");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -187,7 +187,7 @@
                     <div id="one" class="clicked text-center"><h4>Skills</h4></div>
                     <div class="one show">
                         content-1
-                        <div class="overlay-1"></div>                        
+                        <!-- <div class="overlay-1"></div>                         -->
                         <div class="contents text-left p-3">
                             <h2 class="display-4">About Me</h2>
 
@@ -212,7 +212,7 @@
                     </div>
                     <div class="two">
                         content-2
-                        <div class="overlay"></div>
+                        <!-- <div class="overlay"></div> -->
                         <div class="contents-2">
 
                             <div class="d-flex justify-content-between my-5 mx-3">
@@ -256,7 +256,7 @@
                     </div>
                     <div class="three">
                         content-3
-                        <div class="overlay"></div>
+                        <!-- <div class="overlay"></div> -->
                         <div class="contents-2">
                             <h3>Contact Me</h3>
                             <div class="d-flex justify-content-between mb-4">
