--- a/aboutMe.html
+++ b/aboutMe.html
@@ -205,7 +205,7 @@
                                
                             </div>
                             <div style="display: block; margin: auto;" class="text-center">
-                                <p>Technical Knowledge: HTML5, CSS3, Vanilla Javascript, jQuery, Bootstrap, Sass and counting..</p> 
+                                <p>Technical Knowledge: HTML5, CSS3, Vanilla Javascript, jQuery, Bootstrap, Sass, PHP, SQL and counting..</p> 
                             </div>
 
                         </div>
