--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="#" class="menu-line-1 current">HOME</a></li>
                     <li><a href="aboutMe.html" class="menu-line-2">ABOUT ME</a></li>
                     <li><a href="work.html" class="menu-line-3">MY WORK</a></li>
+                    <li><a href="#" class="menu-line-3">TOOLS</a></li>
                 </ul>
             </div>
         </div>
