--- a/work2.html
+++ b/work2.html
@@ -21,6 +21,31 @@
                 <section id="hello" class="pb-5">
                     <div class="container pt-5">
 
+                        <!-- Fifth Row -->
+                        <h3 style="color:white;">Android Apps</h3>
+                        <div class="row text-center">
+                            <div class="col-md-4 mb-3" style="background-color: #eeeeee;
+                            opacity: 1;
+                            box-shadow: 0 20px 20px -20px rgba(0,0,0,0.7);">
+                                <img src="Resources/Meals App.PNG" width="600px" height="338px" class="card-img-top img-fluid">
+                                <!-- <div class="card" onclick="window.open('psd-1.html','mywindow');" style="cursor: pointer;">
+                                    <img src="Resources/Meals App.PNG" width="600px" height="338px" class="card-img-top img-fluid">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Meals App</h3>
+                                    </div>
+                                </div> -->
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <a href='https://play.google.com/store/apps/details?id=com.zenithmanuel.mealsapp&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' target="_blank"><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="100%"/></a>
+                                <!-- <div class="card" onclick="window.open('psd-2.html','mywindow');" style="cursor: pointer;">
+                                    <img src="Resources/psd to html/psd2.jpg" class="card-img-top img-fluid">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Project 2</h3>
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+
                         <!-- First Row -->
 
                         <h3 style="color:white;">Bootstrap</h3>
@@ -128,7 +153,7 @@
                         </div>
 
                         <!-- Fourth Row -->
-                        <h3 style="color:white;">Wordpress Custom Themes</h3>
+                        <!-- <h3 style="color:white;">Wordpress Custom Themes</h3>
                         <div class="row text-center">
                             <div class="col-md-4 mb-3">
                                 <div class="card">
@@ -146,7 +171,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Fifth Row -->
                         <h3 style="color:white;">PSD to HTML</h3>
