--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
 
     <header>
-        <video id="video" src="Resources/typing-man.mp4" playsinline autoplay loop="true"></video>
+        <video id="video" src="Resources/typing-man.mp4" playsinline autoplay muted loop="true"></video>
     </header>
-
     <nav>
         <div class="flex-container">
             <div class="name-container">
