--- a/aboutMe.html
+++ b/aboutMe.html
@@ -203,7 +203,7 @@
                 <div class="grid-section text-white">
                     <div id="one" class="clicked text-center"><h4>Skills</h4></div>
                     <div class="one show">
-                        content-1
+                        <!-- content-1 -->
                         <!-- <div class="overlay-1"></div>                         -->
                         <div class="contents text-left p-3">
                             <h2 class="display-4">About Me</h2>
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                     <div class="two">
-                        content-2
+                        <!-- content-2 -->
                         <!-- <div class="overlay"></div> -->
                         <div class="contents-2">
 
@@ -273,7 +273,7 @@
                         </div>
                     </div>
                     <div class="three">
-                        content-3
+                        <!-- content-3 -->
                         <!-- <div class="overlay"></div> -->
                         <div class="contents-2">
                             <h3>Contact Me</h3>
