--- a/aboutMe.html
+++ b/aboutMe.html
@@ -57,7 +57,7 @@
 
         .one {
             position: relative;
-            background-image: url("Resources/busystreet -78.png");
+            background-image: url("Resources/busystreet--78.jpg");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -67,7 +67,7 @@
         }
         .two {
             position: relative;
-            background-image: url("Resources/citylights -40.png");
+            background-image: url("Resources/citylights--40.jpg");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -78,7 +78,7 @@
         }
         .three {
             position: relative;
-            background-image: url("Resources/cellphone.jpg");
+            background-image: url("Resources/cellphone--.jpg");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
