--- a/aboutMe.html
+++ b/aboutMe.html
@@ -33,7 +33,11 @@
   .grid-section div h4 {
     position: absolute;
     margin-top: 15vh;
-    margin-left: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
     z-index: 3;
   }
   
