--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
            
             </div>
             <div class="icon">
-                    <i class="fab fa-facebook fa-2x" onclick="window.open('https://www.facebook.com/zenith.manuel?ref=br_rs','mywindow');" style="cursor: pointer;"></i>
+                    <!-- <i class="fab fa-facebook fa-2x" onclick="window.open('https://www.facebook.com/zenith.manuel?ref=br_rs','mywindow');" style="cursor: pointer;"></i> -->
+                    <i class="fab fa-facebook fa-2x" style="cursor: pointer;"></i>
                     <i class="fab fa-twitter fa-2x" onclick="window.open('https://twitter.com/23nith','mywindow');" style="cursor: pointer;"></i>
                     <i class="fab fa-instagram fa-2x" onclick="window.open('https://www.instagram.com/meetme.at.thezenith','mywindow');" style="cursor: pointer;"></i>
                     <i class="fab fa-github fa-2x" onclick="window.open('https://github.com/23nith','mywindow');" style="cursor: pointer;"></i>
