--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
            
             </div>
             <div class="icon">
-                    <!-- <i class="fab fa-facebook fa-2x" onclick="window.open('https://www.facebook.com/zenith.manuel?ref=br_rs','mywindow');" style="cursor: pointer;"></i> -->
-                    <i class="fab fa-facebook fa-2x" style="cursor: pointer;"></i>
+                    <i class="fab fa-facebook fa-2x" onclick="window.open('https://www.facebook.com/zenith.manuel?ref=br_rs','mywindow');" style="cursor: pointer;"></i>
                     <i class="fab fa-twitter fa-2x" onclick="window.open('https://twitter.com/23nith','mywindow');" style="cursor: pointer;"></i>
                     <i class="fab fa-instagram fa-2x" onclick="window.open('https://www.instagram.com/meetme.at.thezenith','mywindow');" style="cursor: pointer;"></i>
                     <i class="fab fa-github fa-2x" onclick="window.open('https://github.com/23nith','mywindow');" style="cursor: pointer;"></i>
+                    <i class="fab fa-linkedin fa-2x" onclick="window.open('https://www.linkedin.com/in/maria-zenith-manuel-96b874144?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BdepTUy60RNOZHgN0iTnnNA%3D%3D','mywindow');" style="cursor: pointer;"></i>
+
             </div>     
             <div class="flex-left">
             </div>
