--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="css/styles2.css" />
   </head>
-  <body>
+  <body style="user-select: none">
     <header>
       <video
         id="video"
