--- a/work2.html
+++ b/work2.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/styles3.css" />
     <link rel="stylesheet" href="tooltip.css" />
   </head>
-  <body>
+  <body style="user-select: none">
     <header>
       <!-- <video src="resources/typing-man.mp4" autoplay loop="true"></video> -->
     </header>
